Update README.md
Powermock uses reflective access, which is not allowed in recent JDK versions. A workaround is setting the following parameter:  --illegal-access=permit.